syntax="proto3";

option java_multiple_files = true;
option java_package = "cn.atali.usercenter";
option java_outer_classname = "FormComponentProto";
option objc_class_prefix = "FORMCOMPONENTSRV";

package usercenter;
option go_package = "./;usercenter";

import "common.proto";

service FormComponent{
    rpc Add(FormComponentInfo)returns(CommonResponse){}
    rpc Update(FormComponentInfo)returns(CommonResponse){}
    rpc Delete(DelRequest)returns(CommonResponse){}
    rpc Query(QueryFormComponentRequest)returns(QueryFormComponentResponse){}
    rpc GetDetail(GetDetailRequest)returns(GetFormComponentDetailResponse){}
}

message FormComponentInfo {
    string id=1;
	string name=2;
    string group=3;
    int32 index=4;
    string description=5;
    string extends=6;
    string selector=7;
    string designerProps=8;
    string designerLocales=9;
    FormComponentResource resource=10;
    string title=11;
    bool byo=12;
}

message FormComponentResource{
    string id=1;
    string formComponentID=2;
    string icon=3;
    string thumb=4;
    string title=5;
    string description=6;
    int32 span=7;
    string elements=8;
}

message QueryFormComponentRequest{
    // @inject_tag: uri:"pageIndex" form:"pageIndex"
    int64 pageIndex=1;
    // @inject_tag: uri:"pageSize" form:"pageSize"
    int64 pageSize=2;
    // @inject_tag: uri:"orderField" form:"orderField"
    string orderField=3;
    // @inject_tag: uri:"desc" form:"desc"
    bool desc=4;
    // @inject_tag: uri:"name" form:"name"
    string name=5;
    // @inject_tag: uri:"group" form:"group"
    string group=6;
    // @inject_tag: uri:"sortConfig" form:"sortConfig"
    string sortConfig=7;
}

message QueryFormComponentResponse{
    Code code=1;
    string message=2;
    repeated FormComponentInfo data=3;
    int64 pages=4;
    int64 records=5;
    int64 total=6;
}

message GetFormComponentDetailResponse{
    Code code=1;
    string message=2;
    FormComponentInfo data=3;
}